Helm/Traefik/Dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.cybertronlabs.us`) # change this to your domain
      kind: Rule
      middlewares:
        - name: authentik-outpost
        - name: rate-limit
        #- name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: cybertronlabs-tls # change this to your secret!!!
